# CNN_cuda

./: CMakeLists.txt  README.md  readme.txt
include/: cnn.cuh  cnn_launcher.cuh  cnn_naive.cuh  utils.cuh
src/: cnn.cu  cnn_launcher.cu  comparison.cu  table.cu  texture.cu
